--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "contentful": "^7.8.1",
+    "dotenv": "^8.0.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
